<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/verticalLinearLayout"
    tools:context="com.nrs.nsnik.nrseaster.EasterActivity">


    <LinearLayout
        android:id="@+id/myPasswordContainer"
        style="@style/verticalLinearLayout"
        android:layout_height="wrap_content"
        android:padding="@dimen/sixteen"
        android:visibility="visible">


        <TextView
            android:id="@+id/myPasswordLoadingText"
            style="@style/wrapContent"
            android:layout_width="match_parent"
            android:text="@string/myLoading"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/myPasswordText"
            style="@style/addBookText"
            android:hint="@string/myPassword"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:padding="@dimen/eight" />

        <Button
            android:id="@+id/myPasswordGo"
            style="@style/wrapContent"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/eight"
            android:text="@string/myPasswordSubmit"
            android:textColor="@color/white"
            android:theme="@style/buttonClr" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/myImageContainer"
        style="@style/verticalLinearLayout"
        android:baselineAligned="false"
        android:visibility="gone">

        <RelativeLayout
            style="@style/wrapContent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/myNrsImage"
                style="@style/matchParent"
                android:background="@color/colorAccent"
                android:contentDescription="@string/ImageDescriptionBackground" />

            <TextView
                android:id="@+id/myNrsText"
                style="@style/matchParent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/black"
                android:padding="@dimen/sixteen"
                android:text="@string/myNrs"
                android:textColor="@color/white"
                android:textSize="16sp" />


            <ProgressBar
                android:id="@+id/myNrsImageProgress"
                style="@style/progressbar"
                android:layout_gravity="center" />

        </RelativeLayout>

        <RelativeLayout
            style="@style/wrapContent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/myPImage"
                style="@style/matchParent"
                android:background="@color/colorAccent"
                android:contentDescription="@string/ImageDescriptionBackground" />

            <TextView
                android:id="@+id/myPTEXT"
                style="@style/matchParent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/black"
                android:padding="@dimen/sixteen"
                android:text="@string/myName"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/myPImageProgress"
                style="@style/progressbar"
                android:layout_gravity="center" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
